tests/vars.ms
// Mutable
mut x = 5
console.log(x) // 5
x = 10
console.log(x) // 10

// Inmutable
immut x
//x = 20 //  error

// Variable
let y = "hola"
console.log(y) // "hola"
immut y // error no es mutable


// Const
const z = 2
// z = 3 //error